--- a/pages/brand.html
+++ b/pages/brand.html
@@ -4,6 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&display=swap"
+            rel="stylesheet"
+        />
+
         <link rel="stylesheet" href="../css/brand.css" />
     </head>
     <body>
@@ -72,6 +77,20 @@
                         src="../img/brand/m11_vyor_bg1.jpg"
                         alt="스크롤이미지"
                     />
+                </div>
+            </div>
+
+            <div class="brandRightbox_3">
+                <div class="BR3_inbox">
+                    <div class="BR3_inTxt">
+                        <div>VYOR</div>
+                        <div>Vitality</div>
+                    </div>
+
+                    <div class="BR3_inTxt2">
+                        <h3>생기</h3>
+                        <p>피부와 머릿결에 건강한 활력을 불어넣습니다.</p>
+                    </div>
                 </div>
             </div>
         </section>
