--- a/pages/home.html
+++ b/pages/home.html
@@ -8,6 +8,9 @@
   </head>
 
   <body>
+    <!-- ✅ 팀 공용 Header 자리 -->
+    <header id="header"></header>
+
     <!-- ================= HERO SECTION ================= -->
     <section id="hero" class="fade-section">
       <video autoplay muted loop playsinline>
@@ -75,6 +78,10 @@
         <p>비오르는 과학적 연구를 통해 자연의 순수함을 완성합니다.</p>
       </div>
     </section>
+
+    <!-- ✅ 팀 공용 Footer 자리 -->
+    <footer id="footer"></footer>
+
     <script src="../js/home.js"></script>
   </body>
 </html>
