--- a/pages/brand.html
+++ b/pages/brand.html
@@ -43,12 +43,12 @@
             </div>
 
             <div class="brandLeftbox_2">
-                <p style="color: #1a1a1a; font-size: 25px">VYOR의 철학</p>
-                <h1 style="color: #1a1a1a; font-size: 50px">
+                <p style="color: #1a1a1a; font-size: 21px">VYOR의 철학</p>
+                <h1 style="color: #1a1a1a; font-size: 53px">
                     Find Your Light,<br />
                     Own Your Essence
                 </h1>
-                <p style="color: #333; font-size: 20px">
+                <p style="color: #838181; font-size: 18px">
                     VYOR은 단순히 화장품을 넘어,<br />
                     당신의 빛을 찾고 자신만의 아름다움을<br />
                     발견하는 여정을 의미합니다.
@@ -81,18 +81,105 @@
             </div>
 
             <div class="brandRightbox_3">
-                <div class="BR3_inbox">
-                    <div class="BR3_inTxt">
-                        <div>VYOR</div>
-                        <div>Vitality</div>
-                    </div>
+                <ul>
+                    <li>
+                        <div class="front">
+                            <div class="tit1">
+                                <span>V</span>
+                                YOR
+                            </div>
+                            <div class="tit2">Vitality</div>
+                        </div>
 
-                    <div class="BR3_inTxt2">
-                        <h3>생기</h3>
-                        <p>피부와 머릿결에 건강한 활력을 불어넣습니다.</p>
-                    </div>
-                </div>
+                        <div class="hidden">
+                            <div class="tit3">생기</div>
+                            <div class="txt">
+                                피부와 머릿결에 건강한 활력을 불어넣습니다.
+                            </div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="front">
+                            <div class="tit1">
+                                <span>V</span>
+                                YOR
+                            </div>
+                            <div class="tit2">Your</div>
+                        </div>
+
+                        <div class="hidden">
+                            <div class="tit3">당신의 개성</div>
+                            <div class="txt">
+                                남들과 비교하지 않고, 나만의 아름다움을
+                                존중합니다.
+                            </div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="front">
+                            <div class="tit1">
+                                <span>V</span>
+                                YOR
+                            </div>
+                            <div class="tit2">Opulence</div>
+                        </div>
+
+                        <div class="hidden">
+                            <div class="tit3">풍요로움</div>
+                            <div class="txt">
+                                촉감, 향, 사용감까지 모두 풍요로운 경험을
+                                선사합니다.
+                            </div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="front">
+                            <div class="tit1">
+                                <span>V</span>
+                                YOR
+                            </div>
+                            <div class="tit2">Radiance</div>
+                        </div>
+
+                        <div class="hidden">
+                            <div class="tit3">빛</div>
+                            <div class="txt">
+                                자연스럽게 빛나는 건강한 피부와 머릿결을
+                                완성합니다.
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
+        </section>
+
+        <!-- 섹션4 -->
+        <section id="brand_4">
+            <div class="brandLeftbox_4">
+                <p style="color: #1a1a1a; font-size: 21px">VYOR Story</p>
+                <h1 style="color: #1a1a1a; font-size: 53px">
+                    What is the VYOR story?
+                </h1>
+                <p style="color: #838181; font-size: 18px">
+                    마치 물 위로 떠오른 듯한 그 땅은 사계절의 결실이 모두 그
+                    자태를 드러내고 있습니다.<br />
+                    수줍은 듯 달려 있는 유자와 레몬, 발밑에는 잘 마른 삼나무
+                    가지와 바질 잎이 어우러져<br />
+                    아름다움을 뽐내고 있습니다. 이 향은 사계절의 아름다움을
+                    한곳에 모은 듯한 특별한<br />
+                    경험을 선사하며, 유자와 레몬의 상큼한 향기, 삼나무 가지의
+                    따뜻한 나무 향, 그리고<br />
+                    바질 잎의 신선함이 어우러져 자연의 조화를 느낄 수 있습니다.
+                    언제나 사계절의<br />
+                    풍요로움과 자연의 아름다움을 느끼며 일상을 더욱 특별하게
+                    만들어줄 것입니다.
+                </p>
+            </div>
+
+            <div class="brandRightbox_4"></div>
         </section>
     </body>
 </html>
