상품 그리드로 수정 중

--- a/pages/product.html
+++ b/pages/product.html
@@ -146,5 +146,25 @@
             <h2>1</h2>
         </div>
     </div>
+
+        <!-- <div class="product_page3">
+        <div class="product_page3_gridBox">
+            <div class="product_page3_gridBox_product">
+                <div class="product_page3_imgbox">
+                    <img/>
+                </div>
+                <div class="product_page3_textBox">
+                    <h3>VYOR 바이오르 바디로션</h3>
+                    <p>84,000원<span class="product_page3_bar"></span>500ml</p>
+                </div>
+            </div>
+            <div class="product_page3_gridBox_product"></div>
+            <div class="product_page3_gridBox_product"></div>
+            <div class="product_page3_gridBox_product"></div>
+            <div class="product_page3_gridBox_product"></div>
+            <div class="product_page3_gridBox_product"></div>
+        </div>
+    </div> -->
+
 </body>
 </html>
