hj part edit_1021

--- a/pages/rndProduction.html
+++ b/pages/rndProduction.html
@@ -1,11 +1,124 @@
+<!-- rndTecnology.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>R&D</title>
 </head>
 <body>
-    rndProduction.html
+   <section id="rnd_sec1" class="videoWrap rnd_sec">
+      <video id="video" autoplay muted loop>
+         <source src="./img/rnd/R&D.mp4" type="video/mp4">
+      </video>
+
+      <div class="overlay">
+         <h1>R&D</h1>
+         <p>연구분야</p>
+      </div>
+   </section>
+
+   <section id="rnd_sec2" class="rnd_content rnd_production_sec2 rnd_sec">
+      <div class="mid_menu">
+         <ul class="sub_menu">
+            <li><a href="#">테크놀로지</a></li>
+            <li><a href="#">연구분야</a></li>
+            <li><a href="#">생산시설</a></li>
+         </ul>
+      </div>
+      <div class="pro_grid">
+         <div class="grid grid7">
+            <div class="outImg">
+               <img src="/img/rnd/m33_img1.jpg" alt="이미지">
+               <img src="/img/rnd/m33_img2.jpg" alt="이미지">
+            </div>
+         </div>
+         <div class="grid grid8">
+            <div class="text_desc">
+               <div>
+                  <h4>비오르 핵심기술의 원동력</h4>
+                  <p>R&D센터는 특화된 기능성 원료를 기반으로<br>
+                  지속적인 혁신과 창의적인 신제품 개발에 전념하고 있습니다.<br>
+                  기초 연구에서 응용 연구까지 철저하고 체계적인 접근 방식을 통해<br>
+                  새로운 제형을 개발하고, 이를 제품화하는 전 과정을 실현하고 있습니다.</p>
+               </div>
+               <div>
+                  <h4>보유기술</h4>
+                  <h5>바이오신소재 원천기술</h5>
+                  <p>피부과학 연구소는 바이오 활성 소재를 활용한 코스메슈티컬 제품을 연구.개발.생산하며,<br>
+                  지속적인 품질과 효능 향상에 힘쓰고 있습니다. 차별화된 제품으로 시장 경쟁력을 유지하며,<br>
+                  최신 피부과학 연구를 바탕으로 안전하고 효과적인 제품을 제공합니다.</p>      
+            </div>
+         </div>
+      </div>
+   </section>
+
+   <section id="rnd_sec3" class="rnd_sec rnd_production_sec3">
+      <div class="pro_grid">
+         <div class="grid grid9">
+            <div class="tech_desc ">
+               <div class="text_rnd">
+                  <button class="title_btn">
+                     <div class="num_rnd">
+                        <h4>01</h4>
+                     </div>
+                     <div class="title">
+                        <h4>천연원료 추출 / 분리 / 정제기술</h4>
+                     </div>
+                  </button>
+                  <div class="desc_text">
+                     <p>천연물에서 유용성분을 추출하기 위해, 먼저 재료의 물리적 및 화학적 특성을 고려하여 적합한 추출 방법을 선택합니다. 이를 통해 추출 효율을 최적화하고 원하는 성분을 농축하여 순도 높은 원료로 개발하여 제품화합니다. 극성과 무극성에 따라 용매를 선택하고, 크로마토그라피와 원심분리 등의 분리 및 정제 과정을 거쳐 최종적으로 안전하고 효과적인 제품을 제공할 수 있습니다.</p>
+                  </div>
+               </div>
+               <div class="text_rnd">
+                  <button class="title_btn">
+                     <div class="num_rnd">
+                        <h4>02</h4>
+                     </div>
+                     <div class="title">
+                        <h4>자가포식(Autophagy) 유도 기능성 소재 개발 및 제품화 기술</h4>
+                     </div>
+                  </button>
+                  <div class="desc_text">
+                     <p>천연물에서 유용성분을 추출하기 위해, 먼저 재료의 물리적 및 화학적 특성을 고려하여 적합한 추출 방법을 선택합니다. 이를 통해 추출 효율을 최적화하고 원하는 성분을 농축하여 순도 높은 원료로 개발하여 제품화합니다. 극성과 무극성에 따라 용매를 선택하고, 크로마토그라피와 원심분리 등의 분리 및 정제 과정을 거쳐 최종적으로 안전하고 효과적인 제품을 제공할 수 있습니다.</p>
+                  </div>
+               </div>
+               <div class="text_rnd">
+                  <button class="title_btn">
+                     <div class="num_rnd">
+                        <h4>03</h4>
+                     </div>
+                     <div class="title">
+                        <h4>난용성 성분 가용화 기술</h4>
+                     </div>
+                  </button>
+                  <div class="desc_text">
+                     <p>천연물에서 유용성분을 추출하기 위해, 먼저 재료의 물리적 및 화학적 특성을 고려하여 적합한 추출 방법을 선택합니다. 이를 통해 추출 효율을 최적화하고 원하는 성분을 농축하여 순도 높은 원료로 개발하여 제품화합니다. 극성과 무극성에 따라 용매를 선택하고, 크로마토그라피와 원심분리 등의 분리 및 정제 과정을 거쳐 최종적으로 안전하고 효과적인 제품을 제공할 수 있습니다.</p>
+                  </div>
+               </div>
+               <div class="text_rnd">
+                  <button class="title_btn">
+                     <div class="num_rnd">
+                        <h4>04</h4>
+                     </div>
+                     <div class="title">
+                        <h4>리포좀 / 엑소좀 스킨부스터 기술</h4>
+                     </div>
+                  </button>
+                  <div class="desc_text">
+                     <p>천연물에서 유용성분을 추출하기 위해, 먼저 재료의 물리적 및 화학적 특성을 고려하여 적합한 추출 방법을 선택합니다. 이를 통해 추출 효율을 최적화하고 원하는 성분을 농축하여 순도 높은 원료로 개발하여 제품화합니다. 극성과 무극성에 따라 용매를 선택하고, 크로마토그라피와 원심분리 등의 분리 및 정제 과정을 거쳐 최종적으로 안전하고 효과적인 제품을 제공할 수 있습니다.</p>
+                  </div>
+               </div>
+            </div>
+         </div>
+              
+         <div class="grid grid10">
+            <div class="outImg">
+               <img src="/img/rnd/m33_img3.jpg" alt="이미지">
+            </div>
+         </div>
+      </div>   
+   </section>
+
 </body>
 </html>
