--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
    
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/home.css">
+  <link rel="stylesheet" href="/css/rnd.css">
+  <link rel="stylesheet" href="/css/sitemap.css">
+  <link rel="stylesheet" href="/css/brand.css">
+  <link rel="stylesheet" href="/css/product.css">
+  <link rel="stylesheet" href="/css/contact.css">
+  <link rel="stylesheet" href="/css/press.css">
   <link rel="stylesheet" href="/css/header.css">
   <link rel="stylesheet" href="/css/footer.css">
 
@@ -21,10 +27,9 @@
    <footer id="footer"></footer>
    
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <!-- <script src="main.js"></script> -->
   <script src="/js/main.js"></script>
   <script src="/js/home.js"></script>
-
+<!-- 
      <script>
       $(document).ready(function() {
          $("#header").load("/components/header.html", function() {
@@ -39,6 +44,6 @@
       });
       $("#footer").load("/components/footer.html");
       }) 
-   </script>
+   </script> -->
 </body>
 </html>
