--- a/pages/rndResearch.html
+++ b/pages/rndResearch.html
@@ -1,11 +1,132 @@
+<!-- rndTecnology.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+   <title>R&D</title>
 </head>
 <body>
-    rndResearch.html
+   <section id="rnd_sec1" class="videoWrap rnd_sec">
+      <video id="video" autoplay muted loop>
+         <source src="./img/rnd/R&D.mp4" type="video/mp4">
+      </video>
+
+      <div class="overlay">
+         <h1>R&D</h1>
+         <p>연구분야</p>
+      </div>
+   </section>
+
+   <section id="rnd_sec2" class="rnd_content  rnd_sec">
+      <div class="mid_menu">
+         <ul class="sub_menu">
+            <li><a href="#">테크놀로지</a></li>
+            <li><a href="#">연구분야</a></li>
+            <li><a href="#">생산시설</a></li>
+         </ul>
+      </div>
+      <div class="frame3">
+         <div class="img_frame">
+            <img src="/img/rnd/m32_phil_bg.jpg" alt="">
+            <h4>VYOR의 클린 뷰티 & 친환경 철학</h4>
+            <div class="text_opacity">
+               <div class="textBox">
+                  <h4>완전 비건 성분</h4>
+                  <h5>동물성 원료, 실험을 완전히 배제한<br>클린 뷰티 실현</h5>
+               </div>
+               <div class="textBox">
+                  <h4>친환경 패키지</h4>
+                  <h5>재활용 가능한 친환경 용기 사용,<br>플라스틱 사용 최소화</h5>
+               </div>
+               <div class="textBox">
+                  <h4>지속 가능한 원료 사용</h4>
+                  <h5>자연 유래 성분을 활용하여<br>환경에 미치는 영향을 최소화</h5>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+
+   <section id="rnd_research_sec3" class="rnd_sec">
+      <div class="grid_container">
+         <div class="grid grid5">
+            <div class="outImg">
+               <!-- <div class="innerImg">
+               </div> -->
+               <div class="text_area">
+                  <h4>피부 과학 기반의 포뮬러 설계</h4>
+                  <!-- <h1>PILKO COSPHARM</h1>
+                  <h2>기술력</h2>
+                  <div></div>
+                  <h5>VYOR은 PILKO COSPHARM과 첨단 연구 개발을 통해 탄생한<br>고기능성 비건 화장품 브랜드입니다.</h5> -->
+               </div>
+            </div>
+         </div>
+         <div class="grid grid6">
+            <div class="text_desc">
+               <div>
+                  <h4>다층 구조 보습 기술</h4>
+                  <p>히알루론산, 세라마이드 등 다양한 보습 성분이 피부를 깊이 감싸며 수분 손실을 방지합니다.</p>
+               </div>
+               <div>
+                  <h4>저자극 약산성 포뮬러</h4>
+                  <p>피부의 자연 pH를 유지하며 민감성 피부에도 안전합니다.</p>
+               </div>
+               <div>
+                  <h4>피부 장벽 강화</h4>
+                  <p>세라마이드와 자연 유래 오일로 피부 보호막을 강화하여 건강한 피부를 유지합니다.</p>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+
+   <section id="rnd_research_sec4" class="rnd_sec">
+      <div class="devel_keyword">
+         <div class="textBox">
+            <h4>연구개발 키워드</h4>
+            <h5>8가지 효능을 중심으로 각 특성에 맞는 제품을 개발하기 위해 다양한 방법을 적용하고 있습니다. 고객의 니즈에 맞춘 최적의 솔루션을 제공하기 위해 노력합니다.</h5>
+         </div>
+         <div class="iconImgBox ">
+            <div class="benefit">
+               <img src="/img/rnd/m32_sec2_icon1.gif" alt="">
+               <p>비건</p>
+            </div>
+            <div class="benefit">
+               <img src="/img/rnd/m32_sec2_icon2.gif" alt="">
+               <p>클린뷰티</p>
+            </div>
+            <div class="benefit">
+               <img src="/img/rnd/m32_sec2_icon3.gif" alt="">
+               <p>친환경</p>
+            </div>
+            <div class="benefit">
+               <img src="/img/rnd/m32_sec2_icon4.gif" alt="">
+               <p>세포재생</p>
+            </div>
+            <div class="benefit">
+               <img src="/img/rnd/m32_sec2_icon5.gif" alt="">
+               <p>안티에이징</p>
+            </div>
+            <div class="benefit">
+               <img src="/img/rnd/m32_sec2_icon6.gif" alt="">
+               <p>항균.항염</p>
+            </div>
+            <div class="benefit">
+               <img src="/img/rnd/m32_sec2_icon7.gif" alt="">
+               <p>엑소좀</p>
+            </div>
+            <div class="benefit">
+               <img src="/img/rnd/m32_sec2_icon8.gif" alt="">
+               <p>미백.주름.탈모</p>
+            </div>
+         </div> 
+      </div>
+   </section> 
 </body>
 </html>
