--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="/js/main.js"></script>
     <script src="/js/home.js"></script>
-    <!-- 
+    
        <script>
         $(document).ready(function() {
            $("#header").load("/components/header.html", function() {
@@ -45,6 +45,7 @@
               });
           });
           $("#footer").load("/components/footer.html");
-     </script> -->
+        });
+     </script>
   </body>
 </html>
