--- a/pages/product.html
+++ b/pages/product.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-<!-- 1 Page -->
+<!-- product_main 공통 -->
     <div class="product_main">
         <video class="product_video" autoplay muted  loop playsinline>
             <source src="../img/products/00.video.mp4">
@@ -22,7 +22,7 @@
 
 <!-- 메뉴 -->
     <div class="product_menus">
-        <div>전체보기</div>
+        <div class="product_menus_bold">전체보기</div>
         <div>바디라인</div>
         <div>헤어라인</div>
         <div>페이셜라인</div>
@@ -163,8 +163,8 @@
             <div class="product_page3_gridBox_product"></div>
             <div class="product_page3_gridBox_product"></div>
             <div class="product_page3_gridBox_product"></div>
-        </div>
-    </div> -->
+        </div> -->
+    </div>
 
 </body>
 </html>
