--- a/pages/brand.html
+++ b/pages/brand.html
@@ -44,10 +44,12 @@
 
             <div class="brandLeftbox_2">
                 <p style="color: #1a1a1a; font-size: 21px">VYOR의 철학</p>
+                <br />
                 <h1 style="color: #1a1a1a; font-size: 53px">
                     Find Your Light,<br />
                     Own Your Essence
                 </h1>
+                <br />
                 <p style="color: #838181; font-size: 18px">
                     VYOR은 단순히 화장품을 넘어,<br />
                     당신의 빛을 찾고 자신만의 아름다움을<br />
@@ -163,7 +165,7 @@
                 <h1 style="color: #1a1a1a; font-size: 53px">
                     What is the VYOR story?
                 </h1>
-                <p style="color: #838181; font-size: 18px">
+                <p style="color: #838181; font-size: 17px">
                     마치 물 위로 떠오른 듯한 그 땅은 사계절의 결실이 모두 그
                     자태를 드러내고 있습니다.<br />
                     수줍은 듯 달려 있는 유자와 레몬, 발밑에는 잘 마른 삼나무
@@ -179,7 +181,74 @@
                 </p>
             </div>
 
-            <div class="brandRightbox_4"></div>
+            <div class="brandRightbox_4">
+                <div>
+                    <img src="../img/brand/m11_story_bg.jpg" alt="나무3" />
+
+                    <div class="brand4_Text">
+                        <h2 style="font-weight: lighter">Watered soil</h2>
+                        <p>:</p>
+                        <p>LIGHT</p>
+                        <p>GRACEFUL</p>
+                        <p>EMBRACING</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 섹션5 -->
+
+        <section id="brand_5">
+            <div class="BR5_inbox">VYOR Notes</div>
+            <div class="BR5_inbox2">
+                <div class="BR5_Ininbox1">DESCRIPTION</div>
+                <div class="BR5_Ininbox2">
+                    AROMATIC CITRUS<br />
+                    SPICY FLORAL<br />
+                    WOODY
+                </div>
+            </div>
+
+            <div class="BR5_inbox3">
+                <div class="BR5_imgBox">
+                    <img src="../img/brand/m11_notes_bg1.jpg" alt="레몬" />
+                    <div class="BR5_imgtxt">TOP NOTE</div>
+                </div>
+
+                <div class="BR5_Ininbox3">
+                    LEMON, BERGAMOT,<br />
+                    CARDAMOM, CLOVE,<br />
+                    ANIS, YUZU, BASIL
+                </div>
+                <div class="BR5_Ininbox4">
+                    <span style="color: #333">감각의 깨어남</span><br /><br />
+                    레몬과 베르가못의 상쾌한 향으로 시작됩니다. 이 신선한 향기는
+                    카다멈과 정향의 매콤한 향기와 어우러져 감각을 깨우며,<br />
+                    소나무와 유칼립투스의 청량한 향기가 더해져 자연 속에 있는
+                    듯한 느낌을 선사합니다. 이 조합은 집중과 몰입을 위한
+                    완벽한<br />
+                    시작을 제공합니다.
+                </div>
+            </div>
+
+            <div class="BR5_inbox4">
+                <div class="BR5_imgBox">
+                    <img src="../img/brand/m11_notes_bg2.jpg" alt="장미" />
+                    <div class="BR5_imgtxt2">MIDDLE NOTE</div>
+                </div>
+
+                <div class="BR5_Ininbox3">
+                    ROSE, JASMINE,<br />
+                    GERANIUM, LILY
+                </div>
+                <div class="BR5_Ininbox4">
+                    <span style="color: #333">연결의 중심</span><br /><br />
+                    초기의 생기가 사라지면서 장미와 자스민의 우아한 꽃향기가
+                    중심을 잡아줍니다. 제라늄의 강렬한 향이 더해져 마음을<br />
+                    진정시키고 안정감을 주며, 깊은 몰입과 함께 마음의 평화를
+                    불러일으켜 내면과의 연결을 강화합니다.
+                </div>
+            </div>
         </section>
     </body>
 </html>
