--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
    <footer id="footer"></footer>
    
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/home.js"></script>
+    <script src="/js/main.js" defer></script>
+    <script src="/js/home.js" defer></script>
     
        <script>
         $(document).ready(function() {
