--- a/pages/home.html
+++ b/pages/home.html
@@ -12,32 +12,32 @@
     <!-- ✅ 팀 공용 Header 자리 -->
     <!-- <header id="header"></header> -->
 
-    <!-- ================= HERO SECTION ================= -->
-    <section id="hero" class="fade-section">
+     <!-- ================= HERO SECTION ================= -->
+    <section id="home_hero" class="home_fade-section">
       <video autoplay muted loop playsinline>
         <source src="../img/main/main_video.mp4" type="video/mp4" />
       </video>
 
       <!-- Scroll Indicator -->
-      <div id="scrollIndicator">
-        <span class="scrollText">SCROLL</span>
-        <span class="scrollBar"></span>
+      <div id="home_scrollIndicator">
+        <span class="home_scrollText">SCROLL</span>
+        <span class="home_scrollBar"></span>
       </div>
 
       <!-- Navigation Arrows -->
-      <div class="arrows">
-        <span class="leftArrow"><</span>
-        <span class="rightArrow">></span>
+      <div class="home_arrows">
+        <span class="home_leftArrow">&lt;</span>
+        <span class="home_rightArrow">&gt;</span>
       </div>
     </section>
 
     <!-- ================= INTRO SECTION ================= -->
-    <section id="intro">
-      <div class="intro-inner fade-item">
-        <div class="intro-left">
+     <section id="home_intro">
+      <div class="home_intro-inner home_fade-item">
+        <div class="home_intro-left">
           <h2>Your Signature,<br />Your VYOR.</h2>
         </div>
-        <div class="intro-right">
+        <div class="home_intro-right">
           <p>
             VYOR의 “Watered Soil”은 바쁜 도시 속에서도 사계절의 균형과 자연의
             호흡을 느낄 수 있도록 설계된 향입니다.<br /><br />
@@ -47,29 +47,29 @@
             VYOR은 당신의 본질을 깨우고, 자연스럽고 우아한 아름다움이 피어나는
             순간을 함께합니다.
           </p>
-          <a href="#" class="view-more">view more <span>→</span></a>
+          <a href="#" class="home_view-more">view more <span>→</span></a>
         </div>
       </div>
 
       <!-- Background Shapes -->
-      <div class="bg-shape shape-left"></div>
-      <div class="bg-shape shape-right"></div>
+      <div class="home_bg-shape home_shape-left"></div>
+      <div class="home_bg-shape home_shape-right"></div>
     </section>
 
     <!-- ================= PRODUCT SECTION ================= -->
-    <section id="product">
-      <div class="product-inner">
-        <div class="product-text">
-          <span class="subtitle">PRODUCT</span>
+    <section id="home_product">
+      <div class="home_product-inner">
+        <div class="home_product-text">
+          <span class="home_subtitle">PRODUCT</span>
           <h2>Refined in the City,<br />Rooted in Nature</h2>
           <p>
             VYOR은 감각적인 도시의 스타일에 비건 철학과<br />
             자연에서 온 클린 성분만을 고집합니다.
           </p>
-          <a href="#" class="view-more">view more <span>→</span></a>
+          <a href="#" class="home_view-more">view more <span>→</span></a>
         </div>
-        <div class="product-gallery">
-          <div class="card">
+        <div class="home_product-gallery">
+          <div class="home_card">
             <a href="product_body.html">
               <img
                 src="../img/products/thum_img_body_lotion.jpg"
@@ -81,10 +81,10 @@
               Watered Soil - 도시 속에서 만나는 촉촉한 흙 향기<br />
               NMN이 피부에 활력과 생기를 더하며 영양감 제공
             </p>
-            <span class="price">84,000원 | 500ml</span>
+            <span class="home_price">84,000원 | 500ml</span>
           </div>
 
-          <div class="card">
+          <div class="home_card">
             <a href="product_body.html">
               <img
                 src="../img/products/thum_img_body_wash.jpg"
@@ -96,10 +96,10 @@
               Watered Soil - 도시 속에서 만나는 촉촉한 흙 향기<br />
               부드러운 거품으로 피부자극 없이 순하게 세정
             </p>
-            <span class="price">65,000원 | 500ml</span>
+            <span class="home_price">65,000원 | 500ml</span>
           </div>
 
-          <div class="card">
+          <div class="home_card">
             <a href="product_hair.html">
               <img src="../img/products/thum_img_shampoo.jpg" alt="샴푸" />
             </a>
@@ -109,10 +109,10 @@
               두피와 모발에 생기 부여, 부드러운 거품으로 두피를 편안하게<br />
               클렌징
             </p>
-            <span class="price">61,000원 | 500ml</span>
+            <span class="home_price">61,000원 | 500ml</span>
           </div>
 
-          <div class="card">
+          <div class="home_card">
             <a href="product_hair.html">
               <img
                 src="../img/products/thum_img_treatment.jpg"
@@ -124,10 +124,10 @@
               Watered Soil - 빗물 머금은 흙 내음처럼<br />
               집중 영양으로 손상 모발에 탄력과 윤기 케어
             </p>
-            <span class="price">68,000원 | 500ml</span>
+            <span class="home_price">68,000원 | 500ml</span>
           </div>
 
-          <div class="card">
+          <div class="home_card">
             <a href="product_facial.html">
               <img src="../img/products/thum_img_skin.jpg" alt="스킨" />
               <h4>VYOR 바이오르 크림 스킨</h4>
@@ -135,10 +135,10 @@
                 Watered Soil - 도시 속의 자연의 향<br />
                 피부에 생기를 채우고 수분을 부드럽게 전달
               </p>
-              <span class="price">64,000원 | 500ml</span>
+              <span class="home_price">64,000원 | 500ml</span>
             </a>
           </div>
-          <div class="card">
+          <div class="home_card">
             <a href="product_facial.html">
               <img src="../img/products/thum_img_emulsion.jpg" alt="에멀젼" />
             </a>
@@ -147,37 +147,65 @@
               Watered Soil - 도시 속의 자연의 향<br />
               피부 속까지 영양을 채워 건강한 윤기를 선사
             </p>
-            <span class="price">69,000원 | 500ml</span>
+            <span class="home_price">69,000원 | 500ml</span>
           </div>
         </div>
       </div>
     </section>
     <!-- ================= R&D SECTION ================= -->
-    <section id="rnd">
-      <div class="rnd-inner">
+    <section id="home_rnd">
+      <div class="home_rnd-inner">
+        
         <!-- 왼쪽 영상 -->
-        <div class="rnd-left">
+        <div class="home_rnd-left">
           <video autoplay muted loop playsinline>
-            <source src="../img/main/sec4_video.mp4" type="video/mp4" />
+            <source src="../img/main/sec3_video.mp4" type="video/mp4" />
           </video>
         </div>
 
         <!-- 오른쪽 텍스트 -->
-        <div class="rnd-right">
-          <span class="subtitle fade-item">R&D</span>
-          <h2 class="fade-item">From Nature,<br />Through Science</h2>
-          <h4 class="fade-item">자연에서 영감받고, 과학으로 완성하다.</h4>
-          <p class="fade-item">
+        <div class="home_rnd-right">
+          <span class="home_subtitle fade-item">R&D</span>
+          <h2 class="home_fade-item">From Nature,<br />Through Science</h2>
+          <h4 class="home_fade-item">자연에서 영감받고, 과학으로 완성하다.</h4>
+          <p class="home_fade-item">
             R&D 센터는 특화된 기능성 원료를 기반으로 지속적인<br />
             혁신과 창의적인 신제품 개발에 전념하고 있습니다.<br />
             기초 연구에서 응용 연구까지 철저하고 체계적인 접근 방식을 통해<br />
             새로운 제형을 개발하고, 이를 제품화하는 전 과정을 실현하고 있습니다.
           </p>
-          <a href="#" class="view-more fade-item">view more <span>→</span></a>
+          <a href="#" class="home_view-more">view more <span>→</span></a>
         </div>
       </div>
     </section>
-    <!-- ================= R&D SECTION ================= -->
-     
+    <!-- ================= MOVING TEXT SECTION ================= -->
+    <section id="home_movingText">
+      <div class="home_text-wrap">
+        <div class="home_text-line">
+          <span>THE JOURNEY OF VYOR</span>  
+          <span>THE JOURNEY OF VYOR</span>  
+          <span>THE JOURNEY OF VYOR</span>     
+        </div>
+      </div>
+    </section>  
+    <!-- ================= CONTACT SECTION ================= -->
+    <section id="home_contact">
+      <div class="home_contact-inner">
+        <video autoplay muted loop playsinline></video>
+          <source src="../img/main/sec4_video.mp4" type="video/mp4" />
+        </video>
+        </div>
+         <div class="home_press-text">
+          <span class="home_subtitle fade-item">CONTACT</span>
+          <h2 class="home_fade-item">Signature Scents.<br>
+            Urban Spirit Nature Soul.</h2>
+          <p class="home_fade-item">
+            도시의 감각을 닮은 시그니처 향,<br/>
+            비건 자연 성분이 완성한 클린 뷰티 브랜드 비오르입니다.<br/>
+            당신만의 향을 찾는 여정, 지금 비오르와 함께 하세요.</p>
+          <a href="#" class="home_view-more">view more <span>→</span></a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
