lotion 상세페이지 거의 끝

--- a/pages/product_body_lotion.html
+++ b/pages/product_body_lotion.html
@@ -37,7 +37,28 @@
                 </div>
             </div>
             <div class="body_lotion_grid">
-
+                <div class="lotion_gridT1">
+                    <p>view list</p>
+                    <div><img src="../img/etc/icon/btnMore_arr2.png" alt="arr2"></div>
+                </div>
+                <div class="lotion_gridT2">
+                    <p>NMN<span class="gridT2_bar"></span>트라넥사믹애씨드<span class="gridT2_bar"></span>시어버터</p>
+                </div>
+                <div class="lotion_gridT3">
+                    <h1>VYOR 바이오르 바디로션</h1>
+                    <p>500ml</p>
+                </div>
+                <div class="lotion_gridT4">
+                    <h1>84,000원</h1>
+                </div>
+                <div class="lotion_gridT5">
+                    <div>특징</div>
+                    <div>NMN이 피부를 활력 있게 가꿔주고 깊은 보습감 제공</div>
+                    <div>트라넥사믹애씨드로 피부톤 개선 및 미백 효과</div>
+                    <div>비건 시어버터로 풍부한 영양감 전달</div>
+                    <div>산뜻하고 빠르게 흡수되는 비건 로션</div>
+                    <a href="../pages/contact.html">제품 문의하기</a>
+                </div>
             </div>
         </div>
     </div>
