--- a/pages/home.html
+++ b/pages/home.html
@@ -54,6 +54,7 @@
       <!-- Background Shapes -->
       <div class="home_bg-shape home_shape-left"></div>
       <div class="home_bg-shape home_shape-right"></div>
+      
     </section>
 
     <!-- ================= PRODUCT SECTION ================= -->
@@ -183,27 +184,27 @@
       <div class="home_text-wrap">
         <div class="home_text-line">
           <span>THE JOURNEY OF VYOR</span>  
-          <span>THE JOURNEY OF VYOR</span>  
-          <span>THE JOURNEY OF VYOR</span>     
+          <span>THE JOURNEY OF VYOR</span> 
+          <span>THE JOURNEY OF VYOR</span>                               
         </div>
       </div>
     </section>  
     <!-- ================= CONTACT SECTION ================= -->
     <section id="home_contact">
       <div class="home_contact-inner">
-        <video autoplay muted loop playsinline></video>
+        <video autoplay muted loop playsinline>
           <source src="../img/main/sec4_video.mp4" type="video/mp4" />
         </video>
         </div>
-         <div class="home_press-text">
-          <span class="home_subtitle fade-item">CONTACT</span>
-          <h2 class="home_fade-item">Signature Scents.<br>
+         <div class="home_press-text fade-item">
+          <span class="home_subtitle">CONTACT</span>
+          <h2>Signature Scents.<br>
             Urban Spirit Nature Soul.</h2>
-          <p class="home_fade-item">
+          <p>
             도시의 감각을 닮은 시그니처 향,<br/>
             비건 자연 성분이 완성한 클린 뷰티 브랜드 비오르입니다.<br/>
             당신만의 향을 찾는 여정, 지금 비오르와 함께 하세요.</p>
-          <a href="#" class="home_view-more">view more <span>→</span></a>
+          <a href="#" class="home_contact_view-more">view more <span>→</span></a>
         </div>
       </div>
     </section>
