--- a/pages/brand_bi.html
+++ b/pages/brand_bi.html
@@ -1,11 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    brand_bi.html
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+
+        <link
+            href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&display=swap"
+            rel="stylesheet"
+        />
+
+        <link rel="stylesheet" href="../css/brand.css" />
+    </head>
+    <body>
+        <!--BI섹션1 -->
+        <section id="brand">
+            <video autoplay muted loop playsinline>
+                <source src="../img/brand/pn1_video.mp4" type="video/mp4" />
+            </video>
+
+            <div class="brandText">
+                <h1>Brand</h1>
+                <p>BI소개</p>
+            </div>
+        </section>
+
+        <!-- BI섹션2 -->
+        <div class="Xbox">VYOR 브랜드 디자인 가이드라인</div>
+        <section id="BI_2">
+            <div class="BI2_Leftbox">
+                <img src="../img/brand/m12_sec1_img1.jpg" alt="디자인이미지" />
+            </div>
+
+            <div class="BI2_Rightbox">
+                <div class="BI_fontBox00">
+                    <h1 style="font-family: Cormorant Garamond, serif">
+                        Logo Typeface
+                    </h1>
+                    <h3 style="font-weight: 400; font-size: 22px">로고 서체</h3>
+                    <div style="color: #838181">
+                        Playfair Display 및 Didot 와 같은 세리프체를 사용하여
+                        우아함과 세련됨을 전달합니다.<br />
+                        이 서체는 정제된 아름다움과 미니멀리즘이라는 VYOR의
+                        철학을 반영합니다.
+                    </div>
+                </div>
+                <div class="BrBox"></div>
+
+                <div class="BI2_Right_inBox2">
+                    <div class="BI_RfontBox">
+                        <p>VYOR font 01</p>
+                        <div>Playfair Display</div>
+                    </div>
+                </div>
+                <div class="BI2_Right_inBox3">
+                    <div class="BI_RfontBox">
+                        <p>VYOR font 02</p>
+                        <div style="font-weight: 300">Didot</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- BI섹션3 -->
+        <section id="BI_3">
+            <div class="BI3_Leftbox">
+                <div class="BI_fontBox00">
+                    <h1 style="font-family: Cormorant Garamond, serif">
+                        Logo Typeface
+                    </h1>
+                    <h3 style="font-weight: 400; font-size: 22px">본문 서체</h3>
+                    <div style="color: #838181">
+                        Libre Baskerville 는 긴 문단에서도 가독성이 뛰어나
+                        본문용 서체로 사용됩니다.<br />
+                        웹과 인쇄물 모두에서 클래식하고 신뢰감을 주는 느낌을
+                        유지합니다.
+                    </div>
+                </div>
+                <div class="BrBox"></div>
+
+                <div class="BI3_Left_inBox">
+                    <div class="BI_LfontBox">
+                        <p>VYOR font 03</p>
+                        <div>Libre<br />Baskerville</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="BI3_Rightbox">
+                <img
+                    src="../img/brand/m12_sec1_img2.jpg"
+                    alt="본문서체이미지"
+                />
+            </div>
+        </section>
+
+        <!-- BI섹션4-->
+        <section id="BI_4">
+            <div class="BI4Box">
+                <h2>Color Palette</h2>
+            </div>
+
+            <div class="BI4Box2_out">
+                <div class="BI4Box2">
+                    <div class="B4_inBox">
+                        <p class="B4_txt">Black</p>
+                    </div>
+                    <div
+                        style="width: 80px; background-color: transparent"
+                        class="B4_inBox"
+                    >
+                        <div style="font-size: 18px; font-weight: 500">
+                            #1A1A1A
+                        </div>
+                        <p>RGB Color <br />CMYK</p>
+                    </div>
+                    <div style="background-color: transparent" class="B4_inBox">
+                        <div>　</div>
+                        <p>
+                            026/026/026<br />
+                            073/067/065/078
+                        </p>
+                    </div>
+                </div>
+
+                <div class="BI4Box3">
+                    <div class="B4_inBox B4_inBox--light">
+                        <!--B4_inBox B4_inBox--light 이렇게 클래스 이름을 두 개 쓴 이유는
+                기본 스타일 + 변형 스타일(BEM 방식)을 동시에 적용하기 위해 -->
+                        <p class="B4_txt">Cream White</p>
+                    </div>
+                    <div
+                        class="B4_inBox B4_inBox--light"
+                        style="width: 80px; background-color: transparent"
+                    >
+                        <div style="font-size: 18px; font-weight: 500">
+                            #F5F3EE
+                        </div>
+                        <p>RGB Color<br />CMYK</p>
+                    </div>
+                    <div
+                        class="B4_inBox B4_inBox--light"
+                        style="background-color: transparent"
+                    >
+                        <div>　</div>
+                        <p>245/243/238<br />000/006/012/000</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- BI섹션5 -->
+
+        <section id="BI_5">
+            <div class="B5_outBox">
+                <div class="B5_imgBox">
+                    <img
+                        src="../img/brand/m12_sec2_tm_bg.jpg"
+                        alt="bi하단이미지"
+                    />
+                    <div class="B5_textBox">
+                        <h2>Visual Tone & Manner</h2>
+                        <p>
+                            VYOR는 여백을 충분히 활용한 미니멀하고 고급스러운
+                            미학을 추구합니다.<br />
+                            절제된 시각 표현을 통해 차분함, 집중감, 시대를
+                            초월한 아름다움을 전달합니다.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </body>
 </html>
